<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>

    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <string name="supportThemeMessage">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="defaultSupportMessage">Спасибо разработчикам и разработчицам за крутое приложение</string>
    <string name="linkToShareApp">Ссылка на курс: https://practicum.yandex.ru/android-developer/</string>
    <string name="appOffer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="emailSupport">adora.i638@gmail.com</string>
    <string name="titleShareApp">Поделиться приложением</string>

    <string name="error_search_empty">Ничего не нашлось</string>
    <string name="error_no_connection">Проблемы со связью</string>
    <string name="download_failed">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>

    <string name="clear_history">Очистить историю</string>
    <string name="you_searched">Вы искали</string>

    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="track_time_start">00:00</string>

    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_playlist_message">Вы не создали \nни одного плейлиста</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>

    <string name="name_playlist">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="playlist_name_created">Плейлист %s создан</string>
    <string name="required_field">Обязательное поле</string>

    <string name="dialog_title">Завершить создание плейлиста?</string>
    <string name="dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_button_cancel">Отмена</string>
    <string name="dialog_button_exit">Завершить</string>

    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="already_added_to_playlist">Трек уже добавлен в плейлист %s</string>

    <string name="share">Поделиться</string>
    <string name="edit_indo">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="want_to_delete_track">Хотите удалить трек?</string>
    <string name="share_playlist">Поделиться плейлистом</string>
    <string name="no_tracks_in_playlist_from_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_empty">Этот плейлист пока пуст</string>
    <string name="want_to_delete_playlist">Хотите удалить плейлист?</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    
    <plurals name="track_count">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="track_duration_minutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
    </plurals>

</resources>