<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsFragment">

    <TextView
        android:id="@+id/tvHeader"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchTheme"
        style="@style/TextInSettingsStyle"
        android:layout_gravity="center_vertical"
        android:text="@string/dark_theme"
        android:thumbTintMode="screen" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/shareApp"
        style="@style/TextInSettingsStyle"
        android:drawableEnd="@drawable/share"
        android:drawableTint="?attr/colorOnSecondary"
        android:text="@string/share_app" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/writeToSupport"
        style="@style/TextInSettingsStyle"
        android:drawableEnd="@drawable/support"
        android:drawableTint="?attr/colorOnSecondary"
        android:text="@string/support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/agreement"
        style="@style/TextInSettingsStyle"
        android:layout_marginEnd="@dimen/dimension_4dp"
        android:drawableEnd="@drawable/arrow_forward"
        android:drawableTint="?attr/colorOnSecondary"
        android:text="@string/user_agreement" />

</LinearLayout>
