<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/arrow_back"
            style="@style/HeaderArrowBack" />

        <TextView
            style="@style/HeaderText"
            android:text="@string/settings" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:paddingStart="@dimen/main_horizontal_padding">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextInSettingsStyle"
                android:text="@string/dark_theme" />


            <Switch
                android:id="@+id/switchTheme"
                style="@style/IconForTextInSettingsStyle"
                android:layout_marginEnd="4dp"
                android:thumbTint="?attr/colorSecondaryVariant"
                android:trackTint="?attr/colorSecondaryVariant" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/share_App"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                style="@style/TextInSettingsStyle"
                android:text="@string/share_app" />

            <ImageView
                style="@style/IconForTextInSettingsStyle"
                android:layout_marginEnd="16dp"
                android:src="@drawable/share" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/write_to_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                style="@style/TextInSettingsStyle"
                android:text="@string/support" />

            <ImageView
                style="@style/IconForTextInSettingsStyle"
                android:layout_marginEnd="14dp"
                android:src="@drawable/support" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                style="@style/TextInSettingsStyle"
                android:text="@string/user_agreement" />

            <ImageView
                style="@style/IconForTextInSettingsStyle"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/arrow_forward" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>
