<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundColor"
        tools:context=".AudioPlayerActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.07" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.93" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuidelineIn16Dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuidelineIn16Dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <TextView
            android:id="@+id/tvCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="28dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/country"
            android:textColor="@color/aluminium"
            android:textFontWeight="400"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/leftGuidelineIn16Dp" />

        <TextView
            android:id="@+id/tvGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/genre"
            android:textColor="@color/aluminium"
            android:textFontWeight="400"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@id/tvCountry"
            app:layout_constraintStart_toStartOf="@id/leftGuidelineIn16Dp" />

        <TextView
            android:id="@+id/tvYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/year"
            android:textColor="@color/aluminium"
            android:textFontWeight="400"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@id/tvGenre"
            app:layout_constraintStart_toStartOf="@id/leftGuidelineIn16Dp" />

        <TextView
            android:id="@+id/tvAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/album"
            android:textColor="@color/aluminium"
            android:textFontWeight="400"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@id/tvYear"
            app:layout_constraintStart_toStartOf="@id/leftGuidelineIn16Dp" />

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/duration"
            android:textColor="@color/aluminium"
            android:textFontWeight="400"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@id/tvAlbum"
            app:layout_constraintStart_toStartOf="@id/leftGuidelineIn16Dp" />

        <TextView
            android:id="@+id/tvCountryName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="end"
            android:textColor="?attr/colorPrimaryVariant"
            android:textFontWeight="400"
            android:textSize="13sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tvCountry"
            app:layout_constraintBottom_toBottomOf="@id/tvCountry"
            app:layout_constraintEnd_toEndOf="@id/rightGuidelineIn16Dp"
            app:layout_constraintStart_toEndOf="@id/tvCountry"
            tools:text="Великобритания" />

        <TextView
            android:id="@+id/tvGenreName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="end"
            android:textColor="?attr/colorPrimaryVariant"
            android:textFontWeight="400"
            android:textSize="13sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tvGenre"
            app:layout_constraintBottom_toTopOf="@id/tvCountryName"
            app:layout_constraintEnd_toEndOf="@id/rightGuidelineIn16Dp"
            app:layout_constraintStart_toEndOf="@id/tvGenre"
            tools:text="Rock" />

        <TextView
            android:id="@+id/tvYearValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="end"
            android:textColor="?attr/colorPrimaryVariant"
            android:textFontWeight="400"
            android:textSize="13sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tvYear"
            app:layout_constraintBottom_toTopOf="@id/tvGenreName"
            app:layout_constraintEnd_toEndOf="@id/rightGuidelineIn16Dp"
            app:layout_constraintStart_toEndOf="@id/tvYear"
            tools:text="1965" />

        <TextView
            android:id="@+id/tvAlbumName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="end"
            android:lines="1"
            android:textColor="?attr/colorPrimaryVariant"
            android:textFontWeight="400"
            android:textSize="13sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintBaseline_toBaselineOf="@id/tvAlbum"
            app:layout_constraintBottom_toTopOf="@id/tvYearValue"
            app:layout_constraintEnd_toEndOf="@id/rightGuidelineIn16Dp"
            app:layout_constraintStart_toEndOf="@id/tvAlbum"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/tvTrackDuration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="end"
            android:textColor="?attr/colorPrimaryVariant"
            android:textFontWeight="400"
            android:textSize="13sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tvDuration"
            app:layout_constraintBottom_toTopOf="@id/tvAlbumName"
            app:layout_constraintEnd_toEndOf="@id/rightGuidelineIn16Dp"
            app:layout_constraintStart_toEndOf="@id/tvDuration"
            tools:text="5:35" />

        <TextView
            android:id="@+id/tvTrackTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:textColor="?attr/colorPrimaryVariant"
            android:textFontWeight="500"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/tvDuration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="0:30" />

        <ImageButton
            android:id="@+id/ibAddToAlbum"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:background="@drawable/round_button"
            android:src="@drawable/add_track_button"
            app:layout_constraintBottom_toBottomOf="@id/ibPlayButton"
            app:layout_constraintEnd_toStartOf="@id/ibPlayButton"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toTopOf="@id/ibPlayButton" />

        <ImageButton
            android:id="@+id/ibPlayButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@null"
            android:src="@drawable/play_button"
            app:layout_constraintBottom_toTopOf="@id/tvTrackTime"
            app:layout_constraintEnd_toStartOf="@id/ibLikeTrack"
            app:layout_constraintStart_toEndOf="@id/ibAddToAlbum" />

        <ImageButton
            android:id="@+id/ibLikeTrack"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:background="@drawable/round_button"
            android:src="@drawable/like_button"
            app:layout_constraintBottom_toBottomOf="@id/ibPlayButton"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/ibPlayButton"
            app:layout_constraintTop_toTopOf="@id/ibPlayButton" />

        <TextView
            android:id="@+id/tvArtistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorPrimaryVariant"
            android:textFontWeight="400"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/ibPlayButton"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            tools:text="The Beatles" />

        <TextView
            android:id="@+id/tvHeadAlbumName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorPrimaryVariant"
            android:textFontWeight="400"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@id/tvArtistName"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            tools:text="Yesterday (Remastered 2009)" />

        <ImageView
            android:id="@+id/ivCover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="46dp"
            android:layout_marginBottom="24dp"
            android:background="?attr/colorPrimary"
            android:scaleType="fitXY"
            android:src="@drawable/placeholder_312px"
            app:layout_constraintBottom_toTopOf="@id/tvHeadAlbumName"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/arrowBack" />

        <ImageButton
            android:id="@+id/arrowBack"
            style="@style/HeaderArrowBack"
            android:layout_marginStart="4dp"
            android:background="@null"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="@id/leftGuidelineIn16Dp"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

